# meta-pytorch-hackathon

./: CONTRIBUTING.md  README.md  inference.py  openenv.yaml  pyproject.toml  verify_scores.py
app/: main.py
env/: data.py  email_env.py  graders.py  tasks.py
env/tests/: test_graders.py
server/: app.py
